--- a/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/list_user.jinja2
+++ b/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/list_user.jinja2
@@ -43,7 +43,7 @@
                 </tr>
             </thead>
         </table>
-        <a class="btn btn-primary btn-flotante"  data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
+        <a class="btn btn-primary btn-flotante" id="boton_ayuda" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
             <i class="iconify" data-icon="mdi:help"></i>
         </a>
         <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
@@ -62,38 +62,45 @@
 
 {% block custom_javascript %}
     <script>
-        $(document).ready(function(){
+       $("#boton_ayuda").click(function(){
             $.ajax({
                 url:"static/json/help/tickets.json",
                 type: "GET",
                 cache: false,
                 success: function(data){
                     console.log(data);
-                    let show = "show";
-                    $("#help_accordion").prepend(`                            
+                    $("#help_accordion").append(`
                         <div class="offcanvas-header offcanvas-bg ">
                             <h5 id="sidebar-label">`+ data.titulo +`</h5>
                             <button class="btn-close" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
                         </div>
-                        <p class="p-descript">`+ data.descripcion +`</p>
-                    `)
-                    data.secciones.map(function(seccion){ 
-                        $('#accordion_item').append(`
+                    `);
+                    let status = "show";
+                    let expanded = "true";
+                    let collapsed = "";
+                    $("#help_accordion").append(`<div class="accordion" id="accordionHelp">`)
+                    data.secciones.map(function(seccion){
+                        
+                        $("#help_accordion").append(`
+                        
                             <div class="accordion-item">
-                                <h2 class="accordion-header" id="headingOne">
-                                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                        `+ seccion.subtitulo +`
+                                <h2 class="accordion-header" id="heading_`+seccion.id+`">
+                                    <button class="accordion-button `+ collapsed +`" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_`+seccion.id+`" aria-expanded="`+ expanded +`" aria-controls="collapse_`+seccion.id+`">
+                                        `+seccion.subtitulo+`
                                     </button>
                                 </h2>
-                                <div id="collapseOne" class="accordion-collapse collapsed `+ show +`" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-                                <div class="accordion-body">
-                                    `+ seccion.descripcion +`
-                                </div>
+                                <div id="collapse_`+seccion.id+`" class="accordion-collapse collapse `+status+`" aria-labelledby="heading_`+seccion.id+`" data-bs-parent="#accordionHelp">
+                                    <div class="accordion-body">
+                                        `+seccion.descripcion+`    
+                                    </div>
                                 </div>
                             </div>
                         `);
+                        status = "";
+                        expanded = "false";
+                        collapsed = "collapsed";
                     });
-                    show = "";                     
+                    $("#help_accordion").append("</div>")
                 },
                 error: function(data){
                     console.log(data);
