--- a/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/list_user.jinja2
+++ b/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/list_user.jinja2
@@ -43,65 +43,54 @@
                 </tr>
             </thead>
         </table>
-        <a class="btn btn-primary btn-flotante" id="boton_ayuda" data-bs-toggle="offcanvas" href="#offcanvasExample" role="button" aria-controls="offcanvasExample">
-            <i class="iconify" data-icon="mdi:help"></i>
-        </a>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
-            <div id="help_accordion">
-                <div class="offcanvas-body p-descript">
-                    <div style="background-color:#ebebeb" >
-                        <div class="overflow-auto " data-spy="scroll" data-target="#navbar-example2" data-offset="0">
-                            <div id="accordion_item"></div>
-                        </div> 
-                    </div>
-                </div>
-            </div>
-        </div> 
+        {{ accordion.btn_help('boton_ayuda','offcanvasExample','mdi:help','btn-flotante')}}
+        {{ accordion.container_help('offcanvasExample','p-descript')}} 
     {% endcall %}
 {% endblock %}
 
 {% block custom_javascript %}
     <script>
        $("#boton_ayuda").click(function(){
+           const url = "https://storage.googleapis.com/pjecz-informatica/static/json/tickets_help.json";
             $.ajax({
-                url:"static/json/help/tickets.json",
+                url:url,
                 type: "GET",
                 cache: false,
                 success: function(data){
                     console.log(data);
-                    $("#help_accordion").append(`
-                        <div class="offcanvas-header offcanvas-bg ">
-                            <h5 id="sidebar-label">`+ data.titulo +`</h5>
-                            <button class="btn-close" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                        </div>
-                    `);
+                    $("#offcanvasExample").prepend(`
+                    <div class="offcanvas-header offcanvas-bg">
+                        <h5 class="offcanvas-title" id="siderbar-label">`+ data.titulo +`</h5>
+                        <button class="btn-close" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        
+                    </div><p class="p-descript">`+ data.descripcion +`</p>`);
                     let status = "show";
                     let expanded = "true";
                     let collapsed = "";
-                    $("#help_accordion").append(`<div class="accordion" id="accordionHelp">`)
+                    $("#accordion_container").html('<div class="accordion" id="accordionHelp">');
                     data.secciones.map(function(seccion){
-                        
-                        $("#help_accordion").append(`
-                        
-                            <div class="accordion-item">
-                                <h2 class="accordion-header" id="heading_`+seccion.id+`">
-                                    <button class="accordion-button `+ collapsed +`" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_`+seccion.id+`" aria-expanded="`+ expanded +`" aria-controls="collapse_`+seccion.id+`">
-                                        `+seccion.subtitulo+`
+                        $("#accordionHelp").append(`
+                             <div class="accordion-item">
+                                <h2 class="accordion-header accordion-color" id="heading_`+ seccion.id +`">
+                                    <button class="accordion-button fw-bolder `+ collapsed +`" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_`+ seccion.id +`" aria-controls="collapse_`+ seccion.id +`" aria-expanded="`+ expanded +`">
+                                        `+ seccion.subtitulo +`
                                     </button>
                                 </h2>
-                                <div id="collapse_`+seccion.id+`" class="accordion-collapse collapse `+status+`" aria-labelledby="heading_`+seccion.id+`" data-bs-parent="#accordionHelp">
-                                    <div class="accordion-body">
-                                        `+seccion.descripcion+`    
+                                <div id="collapse_`+ seccion.id +`" class="accordion-collapse collapse `+ status +`" aria-labelledby="heading_`+ seccion.id +`" data-bs-parent="#accordionHelp">
+                                    <div class="accordion-body help-body">
+                                        `+ seccion.descripcion +`
                                     </div>
                                 </div>
-                            </div>
+                            </div> 
                         `);
                         status = "";
                         expanded = "false";
                         collapsed = "collapsed";
                     });
-                    $("#help_accordion").append("</div>")
+                    $("accordion_container").html('</div>');
+
                 },
+                dataType: 'json',
                 error: function(data){
                     console.log(data);
                 }
