--- a/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/new.jinja2
+++ b/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/new.jinja2
@@ -2,6 +2,7 @@
 {% import 'macros/form.jinja2' as f with context %}
 {% import 'macros/topbar.jinja2' as topbar %}
 {% import 'macros/list.jinja2' as list %}
+{% import 'macros/accordion.jinja2' as accordion %}
 
 {% block title %}Nuevo Ticket{% endblock %}
 
@@ -43,15 +44,58 @@
                 </tr>
             </thead>
         </table>
+        {{ accordion.btn_help('boton_ayuda','offcanvasNew','mdi:help','btn-flotante')}}
+        {{ accordion.container_help('offcanvasNew','p-descript')}} 
     {% endcall %}
 {% endblock %}
 
-{# se manda llamar el json de la ayuda  #}
-{% block content_help %}
-    {{help_tickets}}
-{% endblock %}
-
 {% block custom_javascript %}
+    <script>
+       $("#boton_ayuda").click(function(){
+            $.ajax({
+                url:"static/json/help/tickets.json",
+                type: "GET",
+                cache: false,
+                success: function(data){
+                    console.log(data);
+                    $("#offcanvasNew").prepend(`
+                    <div class="offcanvas-header offcanvas-bg">
+                        <h5 class="offcanvas-title" id="siderbar-label">`+ data.titulo +`</h5>
+                        <button class="btn-close" type="button" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                        
+                    </div><p class="p-descript">`+ data.descripcion +`</p>`);
+                    let status = "show";
+                    let expanded = "true";
+                    let collapsed = "";
+                    $("#accordion_container").html('<div class="accordion" id="accordionHelp">');
+                    data.secciones.map(function(seccion){
+                        $("#accordionHelp").append(`
+                             <div class="accordion-item">
+                                <h2 class="accordion-header accordion-color" id="heading_`+ seccion.id +`">
+                                    <button class="accordion-button fw-bolder `+ collapsed +`" type="button" data-bs-toggle="collapse" data-bs-target="#collapse_`+ seccion.id +`" aria-controls="collapse_`+ seccion.id +`" aria-expanded="`+ expanded +`">
+                                        `+ seccion.subtitulo +`
+                                    </button>
+                                </h2>
+                                <div id="collapse_`+ seccion.id +`" class="accordion-collapse collapse `+ status +`" aria-labelledby="heading_`+ seccion.id +`" data-bs-parent="#accordionHelp">
+                                    <div class="accordion-body help-body">
+                                        `+ seccion.descripcion +`
+                                    </div>
+                                </div>
+                            </div> 
+                        `);
+                        status = "";
+                        expanded = "false";
+                        collapsed = "collapsed";
+                    });
+                    $("accordion_container").html('</div>');
+
+                },
+                error: function(data){
+                    console.log(data);
+                }
+            });
+        });
+    </script>
     <script>
         let dataSet = {{ filtros }};
         let soportes_categorias_ajax = $('#soportes_categorias_datatable').DataTable({
