pruebas obtener json

--- a/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/list_user.jinja2
+++ b/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/list_user.jinja2
@@ -9,6 +9,7 @@
     <!-- traer css para diseño del botón help-->
     <link href="{{ url_for('static', filename='css/quill.css') }}" rel="stylesheet" type="text/css"/>
     <meta http-equiv="Content-Type" content="text/html">
+    <meta http-equiv="Content-Type" content="application/json">
     <meta http-equiv="Access-Control-Allow-Origin" content="*" />
     <style>
         tr {
