--- a/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/list_user.jinja2
+++ b/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/list_user.jinja2
@@ -9,8 +9,8 @@
     <!-- traer css para diseño del botón help-->
     <link href="{{ url_for('static', filename='css/quill.css') }}" rel="stylesheet" type="text/css"/>
     <meta http-equiv="Content-Type" content="text/html">
-    <meta http-equiv="Content-Type" content="application/json">
-    <meta http-equiv="Access-Control-Allow-Origin" content="*" />
+    {# <meta http-equiv="Content-Type" content="application/json"> #}
+    {# <meta http-equiv="Access-Control-Allow-Origin" content="application/json" /> #}
     <style>
         tr {
             border-color: white;
@@ -53,17 +53,24 @@
 
 {% block custom_javascript %}
     <script>
-        
+        /*function get_url_json(){
+            var json_url;
+            switch(location.hostname){
+                case "localhost": json_url = "/static/json/help/tickets_help.json"; break;
+                //case "172.30.37.233": json_url = "Access-Control-Allow-Origin: http://localhost:8006/tickets_help.json"; break;
+                case "127.0.0.1": json_url = "/static/json/help/tickets_help.json"; break;
+                default: json_url = "https://storage.googleapis.com/pjecz-informatica/static/json/tickets_help.json/"; break;
+            }
+            return json_url;
+        }*/
        $("#boton_ayuda").click(function(){
-           //const urlLocal = "http://localhost:8006/tickets.json";
+           const urlLocal = "Access-Control-Allow-Origin: http://localhost:8006/tickets_help.json/";
             const archivo = "/static/json/help/tickets_help.json";
-            const url = "Access-Control-Allow-Origin:https://storage.googleapis.com/pjecz-informatica/static/json/tickets_help.json/";
+            //const url = "https://storage.googleapis.com/pjecz-informatica/static/json/tickets_help.json/";
             
-            
+            //let url = get_url_json();
             $.ajax({
-                url:url,
-                /* headers: {
-                    "Access-Control-Allow-Origin: *" ,*/
+                url:urlLocal,
                 type: "GET",
                 crossDomain: true,
                 dataType: 'json',
@@ -101,7 +108,6 @@
                     $("accordion_container").html('</div>');
 
                 },
-                //},
                 error: function(data){
                     console.log(data);
                 }
