--- a/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/edit.jinja2
+++ b/plataforma_web/blueprints/soportes_tickets/templates/soportes_tickets/edit.jinja2
@@ -52,6 +52,7 @@
                     let expanded = "true";
                     let collapsed = "";
                     $("#accordion_container").html('<div class="accordion" id="accordionHelp">');
+                    console.log(data.secciones)
                     data.secciones.map(function(seccion){
                         $("#accordionHelp").append(`
                              <div class="accordion-item">
