--- a/plataforma_web/blueprints/fin_vales/templates/fin_vales/list.jinja2
+++ b/plataforma_web/blueprints/fin_vales/templates/fin_vales/list.jinja2
@@ -7,6 +7,8 @@
 {% block topbar_actions %}
     {% call topbar.page_buttons(titulo) %}
         {{ topbar.button_list_active('Mi Listado', url_for('fin_vales.list_active')) }}
+        <!-- Enlace que abrirá la URL en una nueva pestaña -->
+        {{ topbar.button('Ver Manual', url_for('fin_vales.manual'), 'mdi:archive-eye-outline') }}
         {% if title != 'Mis Vales' %}
             {{ topbar.button_list_active('Mis Vales', url_for('fin_vales.list_mine_active')) }}
         {% endif %}
